[gd_scene load_steps=7 format=3 uid="uid://bc1c4kjr05n22"]

[ext_resource type="Script" path="res://Scripts/UI/Menus/SaveInstance.gd" id="1_i112t"]
[ext_resource type="Texture2D" uid="uid://cc0uxg71e5lu0" path="res://Assets/UI Sprites/ALL UI ASSETS on one sheet.png" id="2_qjn8k"]
[ext_resource type="Texture2D" uid="uid://idajb5n31743" path="res://Assets/Characters/Character.png" id="3_qhdcq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1r8cu"]
atlas = ExtResource("2_qjn8k")
region = Rect2(56, 152, 32, 32)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g6bdy"]

[sub_resource type="AtlasTexture" id="AtlasTexture_l6nls"]
atlas = ExtResource("3_qhdcq")
region = Rect2(200, 392, 32, 32)

[node name="SaveInstance" type="PanelContainer"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -93.0
offset_bottom = 93.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_i112t")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 2
texture = SubResource("AtlasTexture_1r8cu")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="HBox" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBox"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="SaveNumberLabel" type="Label" parent="MarginContainer/HBox/MarginContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 48
text = "1"
horizontal_alignment = 1

[node name="PlayerSpriteContainer" type="PanelContainer" parent="MarginContainer/HBox"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_g6bdy")

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBox/PlayerSpriteContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_l6nls")
expand_mode = 2
stretch_mode = 5

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/HBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="SaveInfoVBox" type="VBoxContainer" parent="MarginContainer/HBox/PanelContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBox/PanelContainer/SaveInfoVBox"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="Label" type="Label" parent="MarginContainer/HBox/PanelContainer/SaveInfoVBox/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/HBox/PanelContainer/SaveInfoVBox"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="Label2" type="Label" parent="MarginContainer/HBox/PanelContainer/SaveInfoVBox/MarginContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 32

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer/HBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="SaveInfoVBox" type="VBoxContainer" parent="MarginContainer/HBox/PanelContainer2"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBox/PanelContainer2/SaveInfoVBox"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="Label" type="Label" parent="MarginContainer/HBox/PanelContainer2/SaveInfoVBox/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/HBox/PanelContainer2/SaveInfoVBox"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="CoinLabel" type="Label" parent="MarginContainer/HBox/PanelContainer2/SaveInfoVBox/MarginContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 32

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
